[RestAPI] Update handlers
