# analyzer/restapi-plugin/src/main/resources/openapispec.json
@@ -24,85 +24,6 @@
         }
       }
     },
-    "/api/{pkg_manager}/{product}/deps/{timestamp}": {
-      "get": {
-        "tags": [
-          "app"
-        ],
-        "summary": "Rebuild Dependency Net",
-        "description": "Given a product and a timestamp, reconstruct its dependency network\n\nReturn: A set of revisions, along with an adjacency matrix\n\nREST examples:\n\n    GET /api/mvn/org.slf4j:slf4j-api/deps/1233323123\n    GET /api/pypi/numpy/deps/1233323123?transitive=true",
-        "operationId": "rebuild_dependency_net_api__pkg_manager___product__deps__timestamp__get",
-        "parameters": [
-          {
-            "required": true,
-            "schema": {
-              "title": "Pkg Manager",
-              "type": "string"
-            },
-            "name": "pkg_manager",
-            "in": "path"
-          },
-          {
-            "required": true,
-            "schema": {
-              "title": "Product",
-              "type": "string"
-            },
-            "name": "product",
-            "in": "path"
-          },
-          {
-            "required": true,
-            "schema": {
-              "title": "Timestamp",
-              "type": "integer"
-            },
-            "name": "timestamp",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/{pkg_manager}/{product}/cg/{timestamp}": {
-      "get": {
-        "tags": [
-          "app"
-        ],
-        "summary": "Get Call Graph",
-        "description": "Given a product and a timestamp, retrieve its call graph\n\nUse case: A user wants to run a custom analysis locally.\n\nReturn: A JSON-serialized RevisionCallGraph\n\nREST examples:\n\n    GET /api/mvn/org.slf4j:slf4j-api/cg/1233323123\n    GET /api/pypi/numpy/cg/1233323123?transitive=true",
-        "operationId": "get_call_graph_api__pkg_manager___product__cg__timestamp__get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/{pkg_manager}/{product}/{version}": {
       "get": {
         "tags": [
@@ -156,66 +77,6 @@
                 "schema": {
                   "$ref": "#/components/schemas/HTTPValidationError"
                 }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/{pkg_manager}/{product}/{version}/vulnerabilities": {
-      "get": {
-        "tags": [
-          "app"
-        ],
-        "summary": "Get Vulnerabilities",
-        "description": "Vulnerabilities in the transitive closure of a package version\n\nExpected result, in order of detail\n\n- Paths of revisions,\n- Paths of files / compilation units,\n- Paths of functions\n\nREST examples:\n\n    GET /api/mvn/org.slf4j:slf4j-api/1.7.29/vulnerabilities\n    GET /api/pypi/numpy/1.15.2/vulnerabilities",
-        "operationId": "get_vulnerabilities_api__pkg_manager___product___version__vulnerabilities_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/{pkg_manager}/{product}/{version}/impact": {
-      "post": {
-        "tags": [
-          "app"
-        ],
-        "summary": "Post ",
-        "description": "Impact analysis\n\nUse case: the user asks the KB to compute the impact of a semantic change\nto a function\n\nExapected result: The full set of functions reachable from the provided\nfunction\n\nREST examples:\n\n    POST /api/mvn/org.slf4j:slf4j-api/1.7.29/impact\n    POST /api/mvn/org.slf4j:slf4j-api/1.7.29/impact?transitive\n\nThe post body contains a FASTEN URI",
-        "operationId": "post__api__pkg_manager___product___version__impact_post",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/{pkg_manager}/{product}/{version}/cg": {
-      "post": {
-        "tags": [
-          "app"
-        ],
-        "summary": "Update Cg",
-        "description": "Update the static CG of a package version with new edges\n\nUse case: A user runs an instrumented test suite locally and decides to\nupdate the central call graph with edges that do not exist due to\nshortcomings in static analysis.\n\nExpected result: A list of edges that where added.\n\nREST examples:\n\n    POST /api/mvn/org.slf4j:slf4j-api/1.7.29/cg\n    POST /api/pypi/numpy/1.15.2/cg",
-        "operationId": "update_cg_api__pkg_manager___product___version__cg_post",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
               }
             }
           }
